# ic-ner

./: .gitignore  README.md  data_loader.py  main.py  pyproject.toml  test_utils.py  trainer.py  utils.py
models/: __init__.py  modeling_jointTODbert.py  modeling_jointbert.py  module.py
