[tool.poetry]
name = "ic-ner"
version = "0.1.0"
description = "inhouse ic ner jointly trained"
authors = ["Xi Chen <chen-xi@wizard.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
transformers = "^4.23.1"
seqeval = "^1.2.2"
pandas = "^1.5.1"
tqdm = "^4.64.1"
pytorch-crf = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
